[project]
name = "sport-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
